[package]
name = "bb"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4", features = ["unstable-locales"]}
git2 = "0.17.1"
serde = { version = "1", features = ["derive"]}
minijinja = { version = "1", features = ["loader"] }
toml = "0.7.3"
