[package]
name = "bb"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4", features = ["unstable-locales"]}
serde = { version = "1", features = ["derive"]}
minijinja = { version = "1", features = ["loader"] }
toml = "0.7.3"
gix = { version = "0.53.1", default-features = false, features = ["revision", "blob-diff"] }
